api/templates/default/etemplate2.css
/* ... */
.et2_email a:not(:first-child) {
    margin-left: 1em;
}

.et2_hbox > .et2_url_span > a {
    margin-left: 0px;
}

/**
 * Former button without background_image --> <et2-image class="et2-image-button"
 */
et2-image.imageButton {
    height: 20px;
    vertical-align: middle;}

/**
 * Button widget - text only, and icon
 */
.et2_button {
    text-align: center;
    font-size: 9pt;
    white-space: nowrap;
}

.et2_button_text,
input[type=button] {
    background-color: #E0E0E0;
    background-image: url(images/gradient01.png);
    background-position: center;
    background-repeat: repeat-x;
    margin: 5px;
    margin-left: 0;
    padding: 3px;
    border: 1px solid silver;
    color: #101010;
}

.et2_button_icon {
    border: none;
    background-color: transparent;
    padding: 0px;
}

button.et2_button_text:hover,
.et2_file_spanHover,
span.et2_button_text:hover,
input[type=button]:hover {
    color: #050505;
    border: 1px solid gray;
    background-color: #D0D0EE;
}

button.et2_button_text:active,
span.et2_button_text:active,
input[type=button]:active {
    background-image: url(images/gradient02.png);
    background-color: #D0D0E0;
}

button.et2_button_text:focus,
span.et2_button_text:focus,
.et2_file_spanActive,
input[type=button]:focus {
    border: 1px solid #2c3d6f;
    color: #202d52;
    outline: none;
}

button.et2_button_with_image {
    padding-left: 20px;
    background-repeat: no-repeat;
    background-size: 16px;
    height: 24px;
    background-position: center;
}

button.et2_button_with_image.et2_button_text {
    background-position: 4px center;
}

button.et2_buttonFitContent, et2-button.et2_buttonFitContent {
    min-width: max-content;
}

/* et2_box_widget ###*/
button[id="cancel"],
button#cancel {
    padding-left: 6px;
    background-repeat: no-repeat;
    background-position: left;
}

.ui-dialog-buttonset button {
    padding-left: 6px;
    background-position: left;
    background-repeat: no-repeat !important;
}

/**
 * Drop down button
 */
.et2_dropdown button {
    height: 3.0ex;
    display: inline-block;
    vertical-align: middle;
    margin-right: -2px;
    padding: 0px 1ex;
}

.et2_dropdown button > div {
    vertical-align: middle;
}

.et2_dropdown button:last-child {
    padding: 0px;
}

.et2_dropdown + ul.ui-menu {
    position: absolute;
    z-index: 2;
}

/**
 * Color picker widget
 */
.et2_color {
    width: 40px;
    display: inline-block;
    position: relative;
}

.et2_color input {
    padding: 0px;
    height: 20px;
    width: 20px;
    border: 1px solid silver;
}

span.et2_color img[src] {
    /* Extra-specific to make sure we work in grids & preference popup */
    height: 24px;
    position: absolute;
    top: 0px;
    left: 0px;
}

.et2_color .clear {
    background-position: -95px -126px;
    display: none;
}

.et2_color:hover .clear {
    display: inline-block;
}

/**
 * Text box
 */
.et2_textbox {
    height: auto;
}

.et2_textbox_ro {
    white-space: pre-wrap;
}

textarea.et2_textbox {
    border: 1px solid silver;
}

textarea.et2_textbox_ro {
    border: none;
}

/*Switch of FF red border validation*/
.et2_textbox:invalid {
    box-shadow: none;
}

.et2_bold {
    font-weight: bold;
}

.et2_italic {
    font-style: italic;
}

/**
 * Multi-select widget
 */
[search][multiple] ::part(base) {
	border: none;
	box-shadow: none;
}
button.et2_selectbox_expand {
    width: 16px;
    display: inline-block;
}

.et2_selectbox .ui-widget-header {
    padding: 0px 6px 0px 6px;
    text-align: center;
}

.et2_selectbox .ui-widget-header ul {
    float: left;
    margin-left: -5px;
    text-align: left;
}

.et2_selectbox .ui-widget-header li {
    float: left;
    padding-top: 0px;
}

.et2_selectbox .ui-widget-header li > span.ui-icon {
    float: left;
    margin-top: -2px;
}

.et2_selectbox .ui-widget-header li > div.et2_link_entry {
    /* Shrink search box to same size as header */
    margin-top: -2px;
    margin-bottom: -2px;
    margin-right: 1ex;
}

.et2_selectbox .ui-widget-header li > div.et2_link_entry input {
    height: 14px;
}

.et2_selectbox .ui-multiselect-checkboxes {
    overflow-y: scroll;
    position: relative;
    text-align: left;
}

.et2_selectbox .ui-multiselect-checkboxes label:hover {
    font-weight: normal;
}

.et2_selectbox .ui-multiselect-checkboxes li {
    margin: 0px;
    clear: both;
    padding-left: 26px;
    padding-right: 3px;
    text-decoration: none;
    list-style-image: none;
    list-style-type: none;
    text-indent: -20px;
}

.et2_selectbox .ui-multiselect-checkboxes ul {
    margin: 0px auto;
    padding-left: 0px;
    clear: both;
    text-decoration: none;
    list-style-image: none;
    list-style-type: none;
}

.et2_selectbox .ui-multiselect-checkboxes ul > label {
    border-bottom: 1px solid black;
}

.et2_selectbox .ui-multiselect-checkboxes label {
    display: block;
    border: 1px solid transparent;
}

.et2_selectbox input[type="checkbox"] {
    margin: 3px;
}

.et2_selectbox .ui-multiselect-checkboxes img, .et2_selectbox .ui-multiselect-checkboxes div {
    float: right;
    height: 1.8em;
    width: 1.8em;
    background-size: contain;
    background-repeat: no-repeat;
}

.et2_selectbox .ui-multiselect-checkboxes div.ui-icon-close {
    visibility: hidden;
    padding: 0px;
}

.et2_selectbox .ui-multiselect-checkboxes li:hover div.ui-icon-close {
    visibility: visible;
}

/* Read-only (multi-)select */
ul.et2_selectbox {
    margin: 0px;
    padding: 0px;
    display: inline-block;
}

/* padding between selectbox/textbox and it's label */
input, select {
    text-indent: 5px;
}

.et2_selectbox li {
    text-decoration: none;
    list-style-image: none;
    list-style-type: none;
}

/**
 * Select account dialog
 */
/**
 * Date / Time widgets
 */
span.et2_date {
    min-width: 130px;
}

span.et2_date input.et2_date {
    min-width: 16.5ex;
    background-repeat: no-repeat;
    background-position-x: right;
    background-position-y: 1px;
    background-size: 18px
}
/* ... */

